objects/Delivery_Note__c/Delivery_Note__c.object-meta.xml
<CustomObject>
    <label>Delivery Note</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Delivery Note Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Delivery Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>