objects/Delivery_Note__c/fields/Accounts_Notes__c.field-meta.xml
<CustomField>
    <fullName>Accounts_Notes__c</fullName>
    <formula>Site__r.Account_Notes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accounts Notes</label>
    <type>Text</type>
</CustomField>