objects/Delivery_Note__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <formula>Site__r.ShippingStreet&amp;BR() + 
Site__r.ShippingCity&amp;BR ()+ 
Site__r.ShippingState&amp;BR ()+ 
Site__r.ShippingPostalCode&amp;BR ()+ 
&quot;Tel : &quot; &amp; Site__r.Phone&amp;BR ()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address</label>
    <type>Text</type>
</CustomField>