objects/Delivery_Note__c/fields/Delivery_Address__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Address__c</fullName>
    <label>Delivery Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>