objects/Delivery_Note__c/fields/Delivery_Note_Email_To__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Note_Email_To__c</fullName>
    <label>Delivery Note Email To</label>
    <type>Email</type>
</CustomField>