objects/Delivery_Note__c/fields/Delivery_Note_PDF_Name__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Note_PDF_Name__c</fullName>
    <formula>&quot;Delivery Note &quot;&amp;Site__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery Note PDF Name</label>
    <type>Text</type>
</CustomField>