objects/Delivery_Note__c/fields/Department_Approved_On_Hold__c.field-meta.xml
<CustomField>
    <fullName>Department_Approved_On_Hold__c</fullName>
    <label>Department Approved/On Hold</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>