objects/Delivery_Note__c/fields/Email_for_Copy_Delivery_Note__c.field-meta.xml
<CustomField>
    <fullName>Email_for_Copy_Delivery_Note__c</fullName>
    <label>Email for Copy Delivery Note</label>
    <type>Email</type>
</CustomField>