objects/Delivery_Note__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Delivery Notes</relationshipLabel>
    <relationshipName>Delivery_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>