objects/Delivery_Note__c/fields/Opportunity_Created__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opportunity Created</label>
    <type>Checkbox</type>
</CustomField>