objects/Delivery_Note__c/fields/Priced__c.field-meta.xml
<CustomField>
    <fullName>Priced__c</fullName>
    <label>Priced</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NO INVOICE</fullName>
            </value>
            <value>
                <fullName>NOT PRICED</fullName>
            </value>
            <value>
                <fullName>PRICED</fullName>
            </value>
            <value>
                <fullName>RETURN TO SERVICE</fullName>
            </value>
            <value>
                <fullName>SERVICE TO PRICE</fullName>
            </value>
            <value>
                <fullName>UPLOADED</fullName>
            </value>
            <value>
                <fullName>ZERO INVOICE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>