objects/Delivery_Note__c/fields/Pricing_Notes__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Notes__c</fullName>
    <label>Pricing Notes</label>
    <type>TextArea</type>
</CustomField>